# grikod3

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  meta.yaml  pixi.toml  pyproject.toml  recipe.yaml  setup.py
.github/workflows/: benchmark.yml  build-cython.yml  build-whl.yml  conda-publish.yml  derle-commit-0.yml  derle-commit-1.yml  derle-commit-push.yml  derle-commit.yml  pixi-workflow.yml  python_ci.yml  workflow-manylinux.yml  workflow.yml
docs/: conf.py  index.rst
grikod3/: __init__.py  _version.py  grikod3.cp311-win_amd64.pyd  grikod3.cp312-win_amd64.pyd  grikod3.cp313-win_amd64.pyd  grikod3.cp314-win_amd64.pyd  grikod3.py
