[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grikod3"
version = "0.1.0"
dynamic = ["keywords", "maintainers"]
license = {file = "LICENSE"}
authors = [
  { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "Converts binary numbers to Gray Code. grikod3 (Gray Code, Grey Code)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
keywords = ["Gri Kod", "Gray Code", "Binary", "Encoding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: AGPL-3.0-or-later License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.setuptools_scm]
version_file = "grikod3/grikod3/_version.py"  # Sürüm bilgisinin bulunduğu dosya
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/grikod3/"
Documentation = "https://whitesymmetry.github.io/grikod3/"
Repository = "https://github.com/WhiteSymmetry/grikod3/"
Issues = "https://github.com/WhiteSymmetry/grikod3/issues"
