# pyproject.toml

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "grikod3"
version = "0.1.2"
dynamic = ["keywords", "maintainers"]
license = "AGPL-3.0-or-later"  # SPDX ID

# Diğer proje bilgileri (isteğe bağlı ama tavsiye edilir)
authors = [
    { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "Binary to Gray code conversion package for efficient data encoding."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Ana bağımlılıklarınız
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["grikod3*"]
exclude = ["binder", "build*", "content", "data", "dist", "dist*", "docs", "docs*", "examples*", "examples", "notebooks", "tests", "tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.pyd", "*.so"]  # Sadece Python dosyaları

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/grikod3"
Repository = "https://github.com/WhiteSymmetry/grikod3"

[dependency-groups]
build = [
    "setuptools (>=82.0.1)",
    "cython (>=3.2.5)"
]
