# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grikod3"
version = "0.1.5"
description = "Binary to Gray code conversion package for efficient data encoding."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Mehmet Keçeci", email = "mkececi@yaani.com"}]
keywords = ["gray", "code", "converter"]   # static olarak tanımlandı
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
]

[package.build-dependencies]
setuptools = ">=61.0"
cython = ">=3.0.0"
compilers = "*"  # Linux ortamında Cython kodunu derlemek için GCC/Clang kurar

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/grikod3"
Repository = "https://github.com/WhiteSymmetry/grikod3"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
archs = "auto64"
build-verbosity = 3

[tool.setuptools.packages.find]
include = ["grikod3*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.pyd", "*.so"]
